--- a/example1.html
+++ b/example1.html
@@ -25,8 +25,8 @@
     <div id="b1"></div>
     <script>
         var b1 = document.getElementById("b1");
-        b1.button = new TwoStateButton("b1", "images/buttonUp.png", "images/buttonDown.png", "bobo", "my title", function(down) {
-            console.log('down:' + down);
+        b1.button = new TwoStateButton("b1", "images/buttonUp.png", "images/buttonDown.png", "bobo", "my title", function(event, down) {
+            console.log('button id:' + event.target.id + ' down:' + down);
         });
     </script>
 </body>
