--- a/example3.html
+++ b/example3.html
@@ -27,8 +27,8 @@
     <div id="b1"></div>
     <script>
         var b1 = document.getElementById("b1");
-        b1.button = new TwoStateButton("b1", "images/unchecked.png", "images/checked.png", "checkbox", "checkbox", function(down) {
-            console.log('down:' + down);
+        b1.button = new TwoStateButton("b1", "images/unchecked.png", "images/checked.png", "checkbox", "checkbox", function(event, down) {
+            console.log('button id:' + event.target.id + ' down:' + down);
         });
     </script>
 </body>
