Text button now supported

--- a/example1.html
+++ b/example1.html
@@ -7,25 +7,34 @@
     <script src="js/TwoStateButton.js"></script>
     <style>
         #b1 {
-            position:absolute;
-            cursor:pointer;
-            left:100px;
-            top:100px;
-            width:40px;
-            height:40px;
+            position:absolute; /* Button position can be any */
+            cursor:pointer; /* Advised value for button */
+            left:100px; /* Button left does not have to exist */
+            top:200px; /* Button top does not have to exist */
+            width:40px; /* Set width if upImage or downImage is used */
+            height:40px; /* Set height if upImage or downImage is used */
         }
     </style>
 </head>
 <body>
     <p>
-        Example 1. The two state button works with mouse, touch, or keyboard. The HTML for the two-state button must have 
-        a unique ID. The CSS for the two-state button needs to declare the width and height of the button, and should also
-        set cursor:pointer.
+        <ul>
+            <li>Example 1.</li>
+            <li>The two state button works with mouse, touch, or keyboard.</li>
+            <li>The HTML for the two-state button must have a unique ID.</li>
+            <li>The CSS for the two-state button needs to declare the width and height of the button, if upImage or
+                downImage is specified.</li>
+            <li>Set CSS cursor property to pointer.</li>
+            <li>Don't call TwoStateButton before the button's DOM element exists.</li>
+        </ul>
     </p>
     <div id="b1"></div>
     <script>
+        // The script is down here so we don't call TwoStateButton
+        // before DOM element b1 exists.
         var b1 = document.getElementById("b1");
-        b1.button = new TwoStateButton("b1", "images/buttonUp.png", "images/buttonDown.png", "bobo", "my title", function(event, down) {
+        b1.button = new TwoStateButton("b1", "images/buttonUp.png", "", "images/buttonDown.png", "", "bobo", "my title", function(event, down) {
+            // The parameters are: id, upImage, upText, downImage, downText, ariaLabel, title, callback
             console.log('button id:' + event.target.id + ' down:' + down);
         });
     </script>
