--- a/example3.html
+++ b/example3.html
@@ -21,13 +21,13 @@
 <body>
     <p>
         Example 3. The two state button works with mouse, touch, or keyboard. The HTML for the two-state button must have 
-        a unique ID. The CSS for the two-state button needs to declare the width and height of the button, and should also
-        set cursor:pointer.
+        a unique ID. The CSS for the two-state button needs to declare the width and height of the button, if upImage or
+        downImage are specified, and should also set cursor:pointer.
     </p>
     <div id="b1"></div>
     <script>
         var b1 = document.getElementById("b1");
-        b1.button = new TwoStateButton("b1", "images/unchecked.png", "images/checked.png", "checkbox", "checkbox", function(event, down) {
+        b1.button = new TwoStateButton("b1", "images/unchecked.png", "", "images/checked.png", "", "checkbox", "checkbox", function(event, down) {
             console.log('button id:' + event.target.id + ' down:' + down);
         });
     </script>
